# cfi-demo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/api/: main.py  schemas.py
backend/db/: enums.py  models.py  session.py  types.py
backend/db/queries/: workflow_1_patient_overview.sql  workflow_2_focal_scroll.sql  workflow_3_morphokinetic_timeline.sql
docs/: api.md  database.md  postgres.md
plans/: database_seed.md  frontend_workflows.md
scripts/: ingest.py
