[project]
name = "embpred"
version = "0.0.1"
description = "Embryo viability predictor demo"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
